Fix spacing and theme

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,8 +24,9 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
+  align-items: center;
 }
 
 header {
@@ -36,13 +37,23 @@ main {
   color: #1A1B41;
 }
 
+/* color: #83c200;
+  color: #dbff8f; */
 
-article {
+canvas {
   background-color: #F1FFE7;
+  padding: 1em;
+  border: 3px solid #BAFF29;
+  border-radius: 3px;
+  box-shadow: 0px 0px 1px 2px #DBFF8F;
 }
 
 .hidden {
   display: none;
+}
+
+.user-container {
+  position: relative;
 }
 
 .user-container img {
@@ -70,7 +81,6 @@ article {
 
 .stats-section > article {
   margin: auto 1em;
-  border-radius: 3px;
   padding: 1em;
 }
 
